Fixed header disappearing on mobile

--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: flex-start;
+      -ms-flex-align: flex-start;
+          align-items: flex-start;
   height: 100%;
   margin: 10px;
 }
